--- a/manpages/burp_ca.8
+++ b/manpages/burp_ca.8
@@ -67,6 +67,7 @@ If you find bugs, please report them to the email list. See the website
 <http://burp.grke.net/> for details.
 
 .SH AUTHOR
+Patrick Koppen wrote burp_ca.
 The main author of Burp is Graham Keeling.
 
 .SH COPYRIGHT
