--- a/TODO
+++ b/TODO
@@ -44,3 +44,5 @@ roughly in order of most important to least.
 
 * Check notifications work (warnings are turned off because of conf/cntr init
   problem.
+
+* Stop bedup from trying to process burp2 directories.
