Force the user spell out '-a delete', to avoid confusion with the future diff/long diff' options. Prevent old clients from deleting, to prevent potential accidents.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,9 @@
   * Fix a bug where specifying an alternative restore directory with a trailing
     slash would not work.
   * Set REMOTE_ADDR and REMOTE_PORT environment variables.
+  * Force the user spell out '-a delete', to avoid confusion with the future
+    'diff/long diff' options. Prevent old clients from deleting, to prevent
+    potential accidents.
 
 2014-05-31 Changes in burp-1.4.16:
   * Bug fix for restoring permissions on empty directories.
