--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -176,11 +176,17 @@ Read an additional configuration file.
 \fBmode=server\fR
 Required to run in server mode.
 .TP
+\fBaddress=[address]\fR
+Defines the main TCP address that the server listens on. The default is either '::' or '0.0.0.0', dependent upon compile time options.
+.TP
 \fBport=[port number]\fR
 Defines the main TCP port that the server listens on.
 .TP
+\fBstatus_address=[address]\fR
+Defines the main TCP address that the server listens on for status requests. The default is either '::1' or '127.0.0.1', dependent upon compile time options.
+.TP
 \fBstatus_port=[port number]\fR
-Defines the TCP port that the server listens on for status requests.
+Defines the TCP port that the server listens on for status requests. Comment this out to have no status server.
 .TP
 \fBdaemon=[0|1]\fR
 Whether to daemonise. The default is 1.
