Make asfd stuff capable of doing line buffered reads, and start using the asfd stuff in the status server. Status server stuff is still all broken, but now making good progress.

--- a/TODO
+++ b/TODO
@@ -34,6 +34,10 @@ roughly in order of most important to least.
 
 * Make the status monitor use sdirs.
 
+* Make the status monitor use the async/io stuff
+
+* Make the status monitor and counters use JSON.
+
 * Add data compression.
 
 * Add data encryption.
