Add -l logfile option for the status monitor, for debugging.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -46,6 +46,11 @@ ADDITIONAL SERVER OPTIONS TO USE WITH '\-a c'
 \fB\-C\fR \fB[client]\fR
 Run as if forked via a connection from this client.
 .TP
+ADDITIONAL SERVER OPTIONS TO USE WITH '\-a s'
+.TP
+\fB\-l\fR \fB[path]\fR
+Log file for status monitor - useful for debugging.
+.TP
 ADDITIONAL SERVER OPTIONS TO USE WITH '\-a S'
 .TP
 \fB\-C\fR \fB[client]\fR
@@ -59,6 +64,10 @@ Dump a particular log file in a backup (requires \-C and \-b).
 .TP
 \fB\-d\fR \fB[path]\fR
 Show a particular path in a backup (requires \-C and \-b).
+.TP
+\fB\-l\fR \fB[path]\fR
+Log file for status monitor - useful for debugging.
+.TP
 
 .SH CLIENT OPTIONS
 .TP
