Tweak to compile with burp-2 cross-tools/depkgs.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
   * Fix for xattrs with zero length values.
   * Fix for restore bug when a file cannot be opened.
+  * Tweak to compile with burp-2 cross-tools/depkgs.
 
 2014-07-26 Changes in burp-1.4.20:
   * Fix for backing up fifos with xattrs.
