Add work in progress status-monitor.txt.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -39,7 +39,7 @@ Run as a stand-alone champion chooser process (useful for debugging burp2 style 
 Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '\-c' option. The live monitor requires ncurses support at compile time.
 .TP
 \fB\-a S\fR \fB\fR
-Similar to '\-a s', but it prints the main status monitor summary screen to stdout. The intention is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with '\-a S', listed below. These enable logs and contents of backups to be listed whilst logged in on the server machine.
+Similar to '\-a s', but it prints the main status monitor summary screen to stdout. One application is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with '\-a S', listed below.
 .TP
 ADDITIONAL SERVER OPTIONS TO USE WITH '\-a c'
 .TP
