--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -162,7 +162,7 @@ Long list the top level directory of backup 1.
 Long list the /home/graham directory of backup 1. These '\-d' versions of the list function provide the ability to 'browse' backups.
 .TP
 \fBburp \-a d\fR
-Report the differences between the current backup and the backup that will be made next.
+Report the differences between the current backup and the backup that will be made next. DIFF OPTIONS NOT FULLY IMPLEMENTED YET.
 .TP
 \fBburp \-a D\fR
 A more verbose report of the differences between the current backup and the backup that will be made next.
@@ -414,6 +414,9 @@ The name that the server will put into its own SSL certficates when using the ca
 .TP
 \fBca_burp_ca=[path]\fR
 Path to the burp_ca script when using the ca_conf option.
+.TP
+\fBmonitor_browse_cache=[0|1]\fR
+Whether or not the server should cache the directory tree when a monitor client is browsing. Advantage: browsing is faster. Disadvantage: more memory is used. NOT FULLY IMPLEMENTED YET.
 
 .SH CLIENT CONFIGURATION FILE OPTIONS
 
