--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,8 @@
   * Add 'client_is_windows=0|1' to the stats files.
   * Bug fix for resume bug not correctly truncating the phase2/unchanged
     manifests.
+  * Make restore_clients override client_can_restore/list/verify/delete
+    settings.
 
 2014-08-31 Changes in burp-1.4.22:
   * Fix for xattrs with zero length values.
