Adjust the default config and manpage for the manifest cached option.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -416,7 +416,7 @@ The name that the server will put into its own SSL certficates when using the ca
 Path to the burp_ca script when using the ca_conf option.
 .TP
 \fBmonitor_browse_cache=[0|1]\fR
-Whether or not the server should cache the directory tree when a monitor client is browsing. Advantage: browsing is faster. Disadvantage: more memory is used. NOT FULLY IMPLEMENTED YET.
+Whether or not the server should cache the directory tree when a monitor client is browsing. Advantage: browsing is faster. Disadvantage: more memory is used.
 
 .SH CLIENT CONFIGURATION FILE OPTIONS
 
