--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
   * Make status_wfd non-blocking and run a select() on it before the child
     tries to write to it.
   * Fix a possible segfault when reading from a status client.
+  * Log a more accurate description of ssl_ciphers.
 
 2014-09-28 Changes in burp-1.4.24:
   * Make vss_strip.c include the configure output, so that vss_strip gets the
