Tweaks for release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2014-10-28 Changes in burp-1.4.26:
   * Bug fix for incorrect handling of '' in check_browsedir().
   * Bug fix for made up directory names in check_browsedir() not having the
     directory bit set.
