--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -218,6 +218,12 @@ When set to 0, delta differencing will not take place. That is, when a file chan
 \fBcompression=gzip[0-9]\fR
 Choose the level of gzip compression for files stored in backups. Setting 0 or gzip0 turns compression off. The default is gzip9. This option can be overridden by the client configuration files in clientconfdir on the server.
 .TP
+\fBhard_quota=[b/Kb/Mb/Gb]\fR
+Do not back up the client if the estimated size of all files is greater than the specified size. Example: 'hard_quota = 100Gb'. Set to 0 (the default) to have no limit.
+.TP
+\fBsoft_quota=[b/Kb/Mb/Gb]\fR
+A warning will be issued when the estimated size of all files is greater than the specified size and smaller than hard_quota. Example: 'soft_quota = 95Gb'. Set to 0 (the default) to have no warning.
+.TP
 \fBversion_warn=[0|1]\fR
 When this is on, which is the default, a warning will be issued when the client version does not match the server version. This option can be overridden by the client configuration files in clientconfdir on the server.
 .TP
@@ -602,6 +608,8 @@ Additionally, the following options can be overridden here for each client:
 \fBclient_can_verify\fR
 \fBrestore_client\fR
 \fBcompression\fR
+\fBhard_quota\fR
+\fBsoft_quota\fR
 \fBtimer_script\fR
 \fBtimer_arg\fR
 \fBnotify_success_script\fR
