Tweaks for 1.4.x release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+2014-12-03 Changes in burp-1.4.28:
+  * Help Mac compilation by removing calls to basename() in vss_strip.c and
+    bedup.c.
+  * Add soft/hard quota feature.
+
 2014-10-28 Changes in burp-1.4.26:
   * Bug fix for incorrect handling of '' in check_browsedir().
   * Bug fix for made up directory names in check_browsedir() not having the
