--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -29,6 +29,9 @@ Foreground mode. The server will fork into the background and run as a daemon if
 \fB\-g\fR \fB\fR
 Generate initial CA keys and certificates, and then exit.
 .TP
+\fB\-t\fR \fB\fR
+Dry-run mode to test config file syntax.
+.TP
 \fB\-i\fR \fB\fR
 Print an index table of symbols that humans may see burp produce, and exit.
 .TP
@@ -87,6 +90,9 @@ For use with restores \- strip a number of leading path components.
 .TP
 \fB\-j\fR \fB\fR
 Format list output as JSON.
+.TP
+\fB\-t\fR \fB\fR
+Dry-run mode to test config file syntax.
 .TP
 \fB\-x\fR
 For Windows clients only - do not use the Windows VSS API on restore. Give this option when you are restoring a backup that contains no VSS information.
