Better SSL error logging.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+  * Better SSL error logging.
   * Replace c_rehash with a line of shell script, from Markus Heberling.
 
 2014-12-03 Changes in burp-1.4.28:
