Use lutimes to set times on symlinks.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
   * Better SSL error logging.
   * Replace c_rehash with a line of shell script, from Markus Heberling.
+  * Use lutimes to set times on symlinks.
 
 2014-12-03 Changes in burp-1.4.28:
   * Help Mac compilation by removing calls to basename() in vss_strip.c and
