--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2014-01-03 Changes in burp-1.4.30:
   * Better SSL error logging.
   * Replace c_rehash with a line of shell script, from Markus Heberling.
   * Use lutimes to set times on symlinks.
