--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Allow syslog and stdout logging at the same time (was broken in 1.4.30).
+
 2015-01-03 Changes in burp-1.4.30:
   * Better SSL error logging.
   * Replace c_rehash with a line of shell script, from Markus Heberling.
